[package]
name = "plugin-base"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.10"
blake = "2.0.2"
ed25519-dalek = "1.0"
konst = "0.2"
libloading = "0.7"
log = "0.4"
once_cell = "1.13"
pem = "1.0.2"
plugin-defs = { path = "../plugin-defs" }
pretty_env_logger = "0.4"
semver = "1.0"
tempfile = "3.3.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = ["Win32_Storage_FileSystem"]
