[package]
name = "plugin-base"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.11"
blake = "2.0"
ed25519-dalek = "2"
konst = "0.3"
libloading = "0.8"
log = "0.4"
once_cell = "1.18"
pem = "1.1"
plugin-defs = { path = "../plugin-defs" }
pretty_env_logger = "0.4"
semver = "1.0"
tempfile = "3.7"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.0"
features = ["Win32_Storage_FileSystem"]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["fs"] }