[package]
name = "plugin-defs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
blake = "2.0"
ed25519 = { version = "1.5", features = ["serde"] }
hex = "0.4"
log = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zstd = "0.11"
