[package]
name = "plugin-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
clap = { version = "4.3", features = ["cargo", "derive"] }
plugin-defs = { path = "../plugin-defs" }
rand = "0.8"
serde_json = "1.0"
pem = "1.1"
